<resources>
    <string name="app_name">Secret Notes App</string>
    <string name="masukkan_secret_key_notes">Masukkan Secret Key Notes</string>
    <string name="secret_key">Secret Key</string>
    <string name="cari">Cari</string>
    <string name="simpan_notes">Simpan Notes</string>
    <string name="judul_notes">Judul Notes</string>
    <string name="isi_notes">Isi Notes</string>
    <string name="kirim">Kirim</string>
    <string name="hapus">Hapus</string>
    <string name="keluar">Keluar</string>
    <string name="tambah_notes">Tambah Notes</string>

</resources>