<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/etJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/judul_notes"
            android:background="@drawable/bordered_edittext"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etIsiNotes"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:autofillHints=""
            android:layout_marginTop="10dp"
            android:hint="@string/isi_notes"
            android:background="@drawable/bordered_edittext"
            android:inputType="text|textMultiLine"
            />

        <Button
            android:id="@+id/btnTambahNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan_notes" />
    </LinearLayout>

</ScrollView>